force-app/hfs-backend/main/default/objects/hfs_CourseProgress__c/hfs_CourseProgress__c.object-meta.xml
<CustomObject>
    <description
  >Per-user training record - System of Record for a user&apos;s status, progress and completion against a course (BR 0.6 / HFS-35).</description>
    <label>Course Progress</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Course Progress Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Progress</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>