force-app/hfs-backend/main/default/objects/hfs_CourseProgress__c/fields/hfs_AttemptNumber__c.field-meta.xml
<CustomField>
    <fullName>hfs_AttemptNumber__c</fullName>
    <description
  >The current attempt number (mirrors the latest hfs_CourseAttempt__c.hfs_AttemptNumber__c). Starts at 1 on first Start, increments on each Retake. Set by the Domain layer.</description>
    <label>Attempt Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>