force-app/hfs-backend/main/default/objects/hfs_CourseProgress__c/fields/hfs_CertificateUrl__c.field-meta.xml
<CustomField>
    <fullName>hfs_CertificateUrl__c</fullName>
    <description
  >Link to the earned certificate; issuance is HFS-34.</description>
    <label>Certificate URL</label>
    <type>Url</type>
</CustomField>