force-app/hfs-backend/main/default/objects/hfs_CourseProgress__c/fields/hfs_CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>hfs_CompletionDate__c</fullName>
    <description>Date the user completed the course.</description>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>