force-app/hfs-backend/main/default/objects/hfs_CourseProgress__c/fields/hfs_Contact__c.field-meta.xml
<CustomField>
    <fullName>hfs_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The Contact behind the portal user; optional, supports Contact-based reporting/sharing later.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Course Progress</relationshipLabel>
    <relationshipName>Course_Progress</relationshipName>
    <type>Lookup</type>
</CustomField>