force-app/hfs-backend/main/default/objects/hfs_CourseProgress__c/fields/hfs_Course__c.field-meta.xml
<CustomField>
    <fullName>hfs_Course__c</fullName>
    <description>The course this progress belongs to.</description>
    <label>Course</label>
    <referenceTo>hfs_Course__c</referenceTo>
    <relationshipLabel>Course Progress</relationshipLabel>
    <relationshipName>Course_Progress</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>