force-app/hfs-backend/main/default/objects/hfs_CourseProgress__c/fields/hfs_CurrentAttempt__c.field-meta.xml
<CustomField>
    <fullName>hfs_CurrentAttempt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Points to the in-progress / latest attempt row for quick navigation and to drive card rendering. Set by the Domain when an attempt is created.</description>
    <label>Current Attempt</label>
    <referenceTo>hfs_CourseAttempt__c</referenceTo>
    <relationshipLabel>Current For Progress</relationshipLabel>
    <relationshipName>Current_For_Progress</relationshipName>
    <type>Lookup</type>
</CustomField>