force-app/hfs-backend/main/default/objects/hfs_CourseProgress__c/fields/hfs_CurrentModule__c.field-meta.xml
<CustomField>
    <fullName>hfs_CurrentModule__c</fullName>
    <description>Current module index for in-progress courses.</description>
    <label>Current Module</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>