force-app/hfs-backend/main/default/objects/hfs_CourseProgress__c/fields/hfs_LastAccessedDate__c.field-meta.xml
<CustomField>
    <fullName>hfs_LastAccessedDate__c</fullName>
    <description
  >When the user last opened the course; drives Resume Last Course.</description>
    <label>Last Accessed Date</label>
    <type>DateTime</type>
</CustomField>