force-app/hfs-backend/main/default/objects/hfs_CourseProgress__c/fields/hfs_PercentComplete__c.field-meta.xml
<CustomField>
    <fullName>hfs_PercentComplete__c</fullName>
    <description
  >Percent complete for this course (0-100); drives the per-card progress bar.</description>
    <label>Percent Complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>