force-app/hfs-backend/main/default/objects/hfs_CourseProgress__c/fields/hfs_Status__c.field-meta.xml
<CustomField>
    <fullName>hfs_Status__c</fullName>
    <description>Course status for this user.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>