force-app/hfs-backend/main/default/objects/hfs_CourseProgress__c/fields/hfs_TotalAttempts__c.field-meta.xml
<CustomField>
    <fullName>hfs_TotalAttempts__c</fullName>
    <description
  >Count of all attempts for this user+course; reportable at-a-glance. Driven by the Master-Detail from hfs_CourseAttempt__c.</description>
    <label>Total Attempts</label>
    <summaryForeignKey
  >hfs_CourseAttempt__c.hfs_CourseProgress__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>