force-app/hfs-backend/main/default/objects/hfs_CourseProgress__c/fields/hfs_User__c.field-meta.xml
<CustomField>
    <fullName>hfs_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The partner user who owns this progress; scopes every query to the signed-in user.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Course Progress</relationshipLabel>
    <relationshipName>Course_Progress</relationshipName>
    <type>Lookup</type>
</CustomField>